Issue #26800: Undocumented support of general bytes-like objects as paths in os functions is now deprecated.